<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>johnny5_description</name>
  <version>0.0.0</version>
  <description>Lynxmotion Johnny 5 URDF description</description>
  <maintainer email="matthew.w.richard@gmail.com">matt</maintainer>
  <url type="repository">https://github.com/mattrichard/johnny5</url>
  <url type="bugtracker">https://github.com/mattrichard/johnny5/issues</url>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
